Fixed css issue where navigation covered text content

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -57,6 +57,10 @@ h1, h2, h3 {
 
 .container {
   margin-bottom: 80px;
+
+  @include media-breakpoint-up(md) {
+    padding-left: 100px;
+  }
 }
 
 @import 'partials/icons';
